# pycon-il-2025

./: LICENSE  README.md  pyproject.toml  speakers.py
.github/workflows/: deploy.yml
docs/: announce-cfp-workshop.html  announce-pycon25.html  archives.html  authors.html  categories.html  cfp-workshop.html  diversity-tickets-available.html  index.html  juniors-announce-cfp-workshop.html  meet-our-sponsor-autokitteh.html  meet-our-sponsor-nvidia.html  meet-our-sponsor-nym.html  tags.html  tickets-available.html  videos-published.html  workshop-tickets-available.html
docs/author/: pycon-israel-team.html
docs/category/: announcements.html  related-events.html  sponsors.html
docs/feeds/: all.atom.xml  announcements.atom.xml  related-events.atom.xml  sponsors.atom.xml  updates.atom.xml
docs/he/: announce-cfp-workshop-en.html  announce-pycon25.html  archives.html  authors.html  categories.html  cfp-workshop.html  diversity-tickets-available.html  index.html  juniors-announce-cfp-workshop-en.html  meet-our-sponsor-autokitteh-en.html  meet-our-sponsor-nvidia-en.html  meet-our-sponsor-nym-en.html  tags.html  tickets-available.html  videos-published.html  workshop-tickets-available.html
docs/pages/: acouchbase.html  amat.html  applied-materials.html  autokitteh.html  blog-index.html  call-for-papers.html  cfp-resources.html  code-of-conduct.html  conf-values.html  descope.html  finout.html  hamakor.html  hi-auto.html  homepage.html  mobileye.html  nvidia-he.html  (+12 more)
website_2024/: Makefile  pelicanconf.py  publishconf.py
website_2025/: pelicanconf.py  publishconf.py
(+182 files in other folders)
