[tool.poetry]
name = "website-2024"
version = "0.1.0"
description = "PyCon Israel 2024 website"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.9.1"}
pelican-image-process = "^3.0.3"
pelican-i18n-subsites = "^0.9.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
